[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/pcm_idle_big.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scene1.gd" type="Script" id=3]
<<<<<<< HEAD
[ext_resource path="res://pcm_run1_big.png" type="Texture" id=4]
[ext_resource path="res://pcm_run2_big.png" type="Texture" id=5]
[ext_resource path="res://pcm_run3_big.png" type="Texture" id=6]
[ext_resource path="res://pcm_shoot_big.png" type="Texture" id=7]
[ext_resource path="res://pcm_jump_big.png" type="Texture" id=8]
[ext_resource path="res://nyan_cat_proj.png" type="Texture" id=9]
[ext_resource path="res://nothing.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "Shoot",
"speed": 1.0
=======
[ext_resource path="res://resources/pcm_run1_big.png" type="Texture" id=4]
[ext_resource path="res://resources/pcm_run2_big.png" type="Texture" id=5]
[ext_resource path="res://resources/pcm_run3_big.png" type="Texture" id=6]
[ext_resource path="res://resources/pcm_shoot_big.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
>>>>>>> dc3650ff192850bad56046cd194bf02c5dbc95ab
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
<<<<<<< HEAD
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 1 ) ],
"loop": true,
"name": "Jump",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
=======
"frames": [ ExtResource( 7 ), ExtResource( 1 ) ],
>>>>>>> dc3650ff192850bad56046cd194bf02c5dbc95ab
"loop": true,
"name": "Shoot",
"speed": 1.0
} ]

[node name="Basic_Scene1" type="Node2D"]
script = ExtResource( 3 )

[node name="PCMan" type="AnimatedSprite" parent="."]
position = Vector2( 165, 149 )
frames = SubResource( 1 )
animation = "Jump"

[node name="PCMan2" type="AnimatedSprite" parent="."]
position = Vector2( 164, 452 )
frames = SubResource( 1 )
animation = "Jump"

[node name="PCMan3" type="AnimatedSprite" parent="."]
position = Vector2( 514, 151 )
frames = SubResource( 1 )
animation = "Jump"

[node name="PCMan4" type="AnimatedSprite" parent="."]
position = Vector2( 499, 450 )
frames = SubResource( 1 )
animation = "Jump"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( -61, 320 )
texture = ExtResource( 2 )

[node name="NyanCat" type="AnimatedSprite" parent="."]
position = Vector2( 740, 458 )
frames = SubResource( 2 )
animation = "Shoot"
